CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(preprocessor)

SET( CMAKE_BUILD_TYPE RELEASE )

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14" )
SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${CMAKE_C_FLAGS_DEBUG}" )
SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}" )

#SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin )
#SET( LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib )

SET( CMAKE_EXPORT_COMPILE_COMMANDS on )

#add libraries
SET( LIBRARIES ${LIBRARIES} )

#INCLUDE_DIRECTORIES( )
ADD_EXECUTABLE(bin_preprocessor main.cpp )

TARGET_LINK_LIBRARIES( bin_preprocessor ${LIBRARIES} )

